# Snuffelfiets

./: .git-blame-ignore-revs  .gitattributes  .gitignore  README.md  RouteFilter2.ipynb  RouteFilter4-WERKT.ipynb  api_sql.py  art-routefiltertest.py  data_dump.ipynb  demos.ipynb  environment.yml  kwartaalrapportage.ipynb  kwartaalrapportage_Q12024.ipynb  kwartaalrapportage_Q12024_temperature.ipynb  learning.py  pyproject.toml  rapportage-basis.ipynb  rapportage.ipynb  setup.cfg  versioneer.py
.github/workflows/: codeql.yml  ossar.yml  package-with-conda.yml  python-package-conda-sphinx.yml  snuffelfiets-conda.yml  sphinx-using-conda.yml
docs/source/: api-hidden.rst  api.rst  conf.py  index.rst
docs/source/_templates/: custom-module-template.rst
projects/: fireDeMeern.py
snuffelfiets/: __init__.py  analyse.py  inlezen.py  opschonen.py  plotting.py  routefilter.py
source/: conf.py  index.rst
src/snuffelfiets/: __init__.py  _version.py  analyse.py  inlezen.py  plotting.py  routefilter.py
tests/: conftest.py  fetch_test_data.py  test_inlezen.py  test_pytest.py  test_routefilter.py
tests/data/: test_data.csv
tests/data/Fietsersbond/: README.md  centraal-biltstraat-usp.csv  centraal-koningsweg-usp.csv  centraal-wilhelminapark-usp.csv  merwedekanaal.csv
